// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cityScape findAddress 1`] = `
Object {
  "scope": "NATIONAL",
}
`;

exports[`cityScape findAddress 2`] = `
Object {
  "scope": "MUNICIPAL",
}
`;

exports[`cityScape findAddress 3`] = `
Object {
  "scope": undefined,
}
`;

exports[`cityScape reducer 1`] = `
Object {
  "scope": "NATIONAL",
}
`;
